--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,9 @@ h4 {
 .product-img {
 	width: 265px;
 	height: auto;
-	margin-left: auto;
-	margin-right: auto;
+	/* margin-left: auto;
+	margin-right: auto; */
+	margin: auto;
 }
 
 .item-title {
@@ -170,10 +171,6 @@ h4 {
 
 .total-price,
 #₴ {
-	color: #EB5A1E;
-}
-
-.rouble {
 	color: #EB5A1E;
 }
 
