--- a/css/main.css
+++ b/css/main.css
@@ -188,12 +188,16 @@ h4 {
 }
 
 .hide {
-	opacity: 1;
-	animation-name: hideProducts;
-	animation-duration: 2s;
-	animation-fill-mode: forwards;
+	opacity: 0;
+	min-height: 0;
+	min-width: 0;
+	padding: 0;
+	margin: 0;
+	border: 0 !important;
 }
 
+
+/* Добавлял анимку для лучшего отслеживания измений на сайте */
 @keyframes hideProducts {
 	to {
 		opacity: 0;
